refactor(admin): route admin operations through Dubbo contracts with signed delegation
Migrate the admin service from direct cross-owner data access to explicit
Dubbo RPC contracts hosted on backend-app, enforced by a signed internal
delegation assertion (HS256 JWT) so privileged writes carry verifiable
caller identity.

Contracts (services/api/app-api):
- Add admin read ports, commands, and DTOs for contest, problem, problem
  list, forum, forum comment/tag, solution/comment, notification, and
  submission domains; align rejudge and contest lifecycle commands.

app-web providers (services/app/app-web):
- Implement Dubbo providers and write adapters for every new contract;
  consume delegation assertions via InternalDelegationAssertionVerifier
  and AdminActorAuthorizer before mutating state.
- Replace legacy ContestWritePort / ContestAdministrationDomainService
  and ContestAdjudicationListener with event-driven adjudication receipts
  and idempotent CommandReceiptExecutor.

admin service (services/admin):
- Replace local read/write adapters with Dubbo client adapters under
  modules/admin/port/adapter; cut over contest/problem/notification/
  submission/forum administration to the new contracts.
- Add DelegationAssertionSigner + ConsumerFilter and wire the
  delegationAssertionConsumer Dubbo filter.
- Remove obsolete AdminProblemPort, AdminSubmissionReadPort,
  AdminContestMutationService and their adapters/tests.

Storage (init-db/migrations):
- V20260810110000..V20260810160000 add contest adjudication/finishing/
  rating receipts, harden admission and registration, align tie-breaker
  enum, add relational guards, and normalize contest timestamp columns.

Verification: add architecture, contract-shape, wiring IT, and provider
tests for the new boundaries; refresh existing unit/integration tests.