@@ -1,26 +1,33 @@
 package com.ulticode.modules.admin.service.comment;
 
-import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
-import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
+import com.ulticode.admin.error.AdminErrorCode;
+import com.ulticode.app.api.command.ActorDelegation;
+import com.ulticode.app.api.command.ForumCommentModerationCommand;
+import com.ulticode.app.api.dto.ForumCommentModerationResultDTO;
+import com.ulticode.app.api.service.ForumCommentAdministrationService;
+import com.ulticode.app.api.service.ForumCommentReadPort;
+import com.ulticode.app.api.service.ForumCommentReadPort.ForumCommentPage;
+import com.ulticode.app.api.service.ForumCommentReadPort.ForumCommentRow;
 import com.ulticode.common.auth.CurrentUserProvider;
 import com.ulticode.common.exception.BusinessException;
-import com.ulticode.admin.error.AdminErrorCode;
 import com.ulticode.common.response.PageResult;
+import com.ulticode.common.rpc.RpcResult;
+import com.ulticode.common.tracing.IdMetadata;
+import com.ulticode.common.tracing.TraceMetadata;
 import com.ulticode.common.util.AuditContext;
+import com.ulticode.common.util.TraceIdUtil;
 import com.ulticode.modules.admin.dto.AdminCommentQueryDTO;
 import com.ulticode.modules.admin.dto.AdminCommentVO;
 import com.ulticode.modules.admin.port.AdminCommentReadPort;
-import com.ulticode.modules.forum.entity.ForumComment;
-import com.ulticode.modules.forum.mapper.ForumCommentMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
-import java.time.Clock;
-import java.time.LocalDateTime;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 /**
@@ -30,13 +37,11 @@ import java.util.stream.Collectors;
  * Was previously the {@code if ("forum".equals(type)) ...} block inside
  * {@code AdminCommentServiceImpl}; extracted to keep the service layer a
  * thin router and to make the cross-mapper enrichment contract local to
- * the forum side of the seam.
- *
- * <p>Writes go through {@link ForumCommentMapper}; reads are enriched by
- * {@link AdminCommentReadPort} with author summaries and forum-post titles.
- * The deletion flow uses the shared {@link CurrentUserProvider} to stamp
- * {@code deleted_by}, matching the contract
- * {@code AdminCommentServiceImpl#deleteComment} used to enforce.
+ * carrying full command / idempotency / actor / trace metadata. Author
+ * profiles and post titles are enriched by {@link AdminCommentReadPort}.
+ * {@code RpcResult} failures are mapped explicitly onto
+ * {@link AdminErrorCode}, and the local audit diff (old/new values +
+ * {@code type}) is preserved verbatim.
  *
  * @author ulticode
  */
@@ -47,9 +52,9 @@ public class ForumCommentModerator implements CommentModerator {
 
     static final String TYPE = "forum";
 
-    private final ForumCommentMapper forumCommentMapper;
+    private final ForumCommentReadPort forumCommentReadPort;
+    private final ForumCommentAdministrationService forumCommentAdministrationService;
     private final AdminCommentReadPort commentReadPort;
-    private final Clock clock;
     private final CurrentUserProvider currentUserProvider;
 
     @Override
@@ -59,134 +64,174 @@ public class ForumCommentModerator implements CommentModerator {
 
     @Override
     public PageResult<AdminCommentVO> listComments(AdminCommentQueryDTO query, int page, int limit) {
-        Page<ForumComment> pageResult = new Page<>(page, limit);
-        List<ForumComment> records = forumCommentMapper.selectPageIgnoreDeleted(
-                pageResult, query.getIsFlagged(), query.getIsDeleted(), query.getSearch(),
-                query.getParentEntityId(), query.getSortBy(), query.getSortOrder());
-        pageResult.setRecords(records);
+        ForumCommentPage commentPage = forumCommentReadPort.page(
+                query.getIsFlagged(), query.getIsDeleted(), query.getSearch(),
+                query.getParentEntityId(), query.getSortBy(), query.getSortOrder(), page, limit);
 
-        Set<String> authorIds = records.stream()
-                .map(ForumComment::getAuthorId).collect(Collectors.toSet());
-        Set<String> postIds = records.stream()
-                .map(ForumComment::getPostId).collect(Collectors.toSet());
+        Set<String> authorIds = commentPage.rows().stream()
+                .map(ForumCommentRow::authorId).collect(Collectors.toSet());
+        Set<String> postIds = commentPage.rows().stream()
+                .map(ForumCommentRow::postId).collect(Collectors.toSet());
 
         Map<String, AdminCommentReadPort.AuthorSummary> authorMap =
                 commentReadPort.findAuthorSummariesByIds(authorIds);
         Map<String, String> postTitleMap = commentReadPort.findForumPostTitlesByIds(postIds);
 
-        List<AdminCommentVO> vos = records.stream()
-                .map(c -> toAdminVO(c, authorMap.get(c.getAuthorId()), postTitleMap.get(c.getPostId())))
-                .collect(Collectors.toList());
+        List<AdminCommentVO> vos = commentPage.rows().stream()
+                .map(c -> toAdminVO(c, authorMap.get(c.authorId()), postTitleMap.get(c.postId())))
+                .toList();
 
-        return PageResult.of(vos, pageResult.getTotal(), page, limit);
+        return PageResult.of(vos, commentPage.total(), page, limit);
     }
 
     @Override
     public AdminCommentVO getComment(String commentId) {
-        ForumComment comment = forumCommentMapper.selectByIdIgnoreDeleted(commentId);
+        ForumCommentRow comment = forumCommentReadPort.getById(commentId);
         if (comment == null) {
             throw new BusinessException(AdminErrorCode.NOT_FOUND);
         }
         AdminCommentReadPort.AuthorSummary author = commentReadPort
-                .findAuthorSummariesByIds(Set.of(comment.getAuthorId()))
-                .get(comment.getAuthorId());
+                .findAuthorSummariesByIds(Set.of(comment.authorId()))
+                .get(comment.authorId());
         String postTitle = commentReadPort
-                .findForumPostTitlesByIds(Set.of(comment.getPostId()))
-                .get(comment.getPostId());
+                .findForumPostTitlesByIds(Set.of(comment.postId()))
+                .get(comment.postId());
         return toAdminVO(comment, author, postTitle);
     }
 
     @Override
     public void flagComment(String commentId, String reason) {
-        ForumComment comment = requireEntity(commentId);
-        AuditContext.setUserId(comment.getAuthorId());
-        AuditContext.setOldValues(Map.of(
-            "isFlagged", comment.getIsFlagged(),
-            "flaggedReason", comment.getFlaggedReason() != null ? comment.getFlaggedReason() : "",
-            "type", TYPE
-        ));
+        RpcResult<ForumCommentModerationResultDTO> result = forumCommentAdministrationService.moderate(
+                command(commentId, ForumCommentModerationCommand.Action.FLAG, reason, null));
+        if (result == null || !result.success() || result.data() == null) {
+            throw mapError(result);
+        }
+        ForumCommentModerationResultDTO res = result.data();
+        AuditContext.setUserId(res.authorUserId());
+        AuditContext.setOldValues(oldFlagValues(res));
         AuditContext.setNewValues(Map.of(
             "isFlagged", true,
             "flaggedReason", reason != null ? reason : "",
             "type", TYPE
         ));
-        comment.setIsFlagged(true);
-        comment.setFlaggedReason(reason);
-        comment.setFlaggedAt(LocalDateTime.now(clock));
-        forumCommentMapper.updateById(comment);
         log.info("Forum comment flagged: {}", commentId);
     }
 
     @Override
     public void unflagComment(String commentId) {
-        ForumComment comment = requireEntity(commentId);
-        AuditContext.setUserId(comment.getAuthorId());
-        AuditContext.setOldValues(Map.of(
-            "isFlagged", comment.getIsFlagged(),
-            "flaggedReason", comment.getFlaggedReason() != null ? comment.getFlaggedReason() : "",
-            "type", TYPE
-        ));
+        RpcResult<ForumCommentModerationResultDTO> result = forumCommentAdministrationService.moderate(
+                command(commentId, ForumCommentModerationCommand.Action.UNFLAG, null, null));
+        if (result == null || !result.success() || result.data() == null) {
+            throw mapError(result);
+        }
+        ForumCommentModerationResultDTO res = result.data();
+        AuditContext.setUserId(res.authorUserId());
+        AuditContext.setOldValues(oldFlagValues(res));
         AuditContext.setNewValues(Map.of(
             "isFlagged", false,
             "flaggedReason", "",
             "type", TYPE
         ));
-        // Use LambdaUpdateWrapper with explicit set() so null values are written
-        // (entity updateById is silently dropped by FieldStrategy.NOT_NULL).
-        forumCommentMapper.update(null, new LambdaUpdateWrapper<ForumComment>()
-            .eq(ForumComment::getId, commentId)
-            .set(ForumComment::getIsFlagged, false)
-            .set(ForumComment::getFlaggedReason, null)
-            .set(ForumComment::getFlaggedAt, null));
         log.info("Forum comment unflagged: {}", commentId);
     }
 
     @Override
     public void deleteComment(String commentId) {
-        ForumComment comment = requireEntity(commentId);
-        AuditContext.setUserId(comment.getAuthorId());
-        AuditContext.setOldValues(Map.of("isDeleted", comment.getIsDeleted(), "type", TYPE));
-        AuditContext.setNewValues(Map.of("isDeleted", true, "type", TYPE));
-        // Use LambdaUpdateWrapper to bypass MyBatis-Plus FieldStrategy and entity
-        // @TableField(updateStrategy=...) uncertainty, so is_deleted=true and other
-        // audit fields are reliably persisted in a single statement.
-        String currentUserId = currentUserProvider.getCurrentUserId();
-        forumCommentMapper.update(null, new LambdaUpdateWrapper<ForumComment>()
-            .eq(ForumComment::getId, commentId)
-            .set(ForumComment::getIsDeleted, true)
-            .set(ForumComment::getDeletedAt, LocalDateTime.now(clock))
-            .set(ForumComment::getDeletedBy, currentUserId));
-        log.info("Forum comment deleted: {} by {}", commentId, currentUserId);
-    }
-
-    private ForumComment requireEntity(String commentId) {
-        ForumComment comment = forumCommentMapper.selectByIdIgnoreDeleted(commentId);
-        if (comment == null) {
-            throw new BusinessException(AdminErrorCode.NOT_FOUND);
+        String deletedBy = safeActorId();
+        RpcResult<ForumCommentModerationResultDTO> result = forumCommentAdministrationService.moderate(
+                command(commentId, ForumCommentModerationCommand.Action.DELETE, null, deletedBy));
+        if (result == null || !result.success() || result.data() == null) {
+            throw mapError(result);
         }
-        return comment;
+        ForumCommentModerationResultDTO res = result.data();
+        AuditContext.setUserId(res.authorUserId());
+        AuditContext.setOldValues(oldDeleteValues(res));
+        AuditContext.setNewValues(Map.of("isDeleted", true, "type", TYPE));
+        log.info("Forum comment deleted: {} by {}", commentId, deletedBy);
+    }
+    private ForumCommentModerationCommand command(String commentId, ForumCommentModerationCommand.Action action,
+                                                  String reason, String deletedBy) {
+        String actorId = safeActorId();
+        return new ForumCommentModerationCommand(
+                UUID.randomUUID().toString(),
+                IdMetadata.mint(),
+                new ActorDelegation(
+                        currentUserProvider.hasRole("SUPER_ADMIN") ? "SUPER_ADMIN" : "ADMIN",
+                        actorId, actorId, "forum comment moderation"),
+                currentTrace(),
+                commentId, action, reason, deletedBy);
     }
 
-    static AdminCommentVO toAdminVO(ForumComment comment,
+    private static TraceMetadata currentTrace() {
+        String reqId = TraceIdUtil.current();
+        if (reqId == null || reqId.isBlank()) {
+            reqId = "t-" + UUID.randomUUID();
+        }
+        return new TraceMetadata(reqId, null, null, null);
+    }
+
+    private String safeActorId() {
+        String actorId = currentUserProvider.getCurrentUserId();
+        if (actorId == null || actorId.isBlank()) {
+            throw new BusinessException(AdminErrorCode.UNAUTHORIZED, "Authenticated admin actor is required");
+        }
+        return actorId;
+    }
+
+    private static BusinessException mapError(RpcResult<?> result) {
+        if (result == null) {
+            return new BusinessException(AdminErrorCode.UNKNOWN_ERROR,
+                    "RPC result is null (transport failure)");
+        }
+        var err = result.error();
+        if (err == null) {
+            return new BusinessException(AdminErrorCode.UNKNOWN_ERROR,
+                    "RPC failed without error payload");
+        }
+        return switch (err.code()) {
+            case 40000 -> new BusinessException(AdminErrorCode.BAD_REQUEST, err.message());
+            case 40100 -> new BusinessException(AdminErrorCode.UNAUTHORIZED, err.message());
+            case 40300 -> new BusinessException(AdminErrorCode.FORBIDDEN, err.message());
+            case 40401 -> new BusinessException(AdminErrorCode.NOT_FOUND, err.message());
+            default -> new BusinessException(AdminErrorCode.UNKNOWN_ERROR, err.message());
+        };
+    }
+
+
+    private static Map<String, Object> oldFlagValues(ForumCommentModerationResultDTO res) {
+        Map<String, Object> map = new HashMap<>();
+        map.put("isFlagged", res.previousIsFlagged());
+        map.put("flaggedReason", res.previousFlaggedReason());
+        map.put("type", TYPE);
+        return map;
+    }
+
+    private static Map<String, Object> oldDeleteValues(ForumCommentModerationResultDTO res) {
+        Map<String, Object> map = new HashMap<>();
+        map.put("isDeleted", res.previousIsDeleted());
+        map.put("type", TYPE);
+        return map;
+    }
+    static AdminCommentVO toAdminVO(ForumCommentRow comment,
                                      AdminCommentReadPort.AuthorSummary author,
                                      String postTitle) {
         return new AdminCommentVO(
-            comment.getId(),
-            comment.getBody(),
-            comment.getCreatedAt(),
-            comment.getEditedAt() != null ? comment.getEditedAt() : comment.getCreatedAt(),
-            comment.getAuthorId(),
-            comment.getParentId(),
+            comment.id(),
+            comment.body(),
+            comment.createdAt(),
+            comment.editedAt() != null ? comment.editedAt() : comment.createdAt(),
+            comment.authorId(),
+            comment.parentId(),
             TYPE,
-            comment.getPostId(),
+            comment.postId(),
             postTitle,
             author != null ? new AdminCommentVO.AuthorInfo(author.id(), author.username(), author.avatar()) : null,
-            comment.getIsFlagged(),
-            comment.getFlaggedReason(),
-            comment.getFlaggedAt(),
-            comment.getIsDeleted(),
-            comment.getDeletedAt(),
-            comment.getDeletedBy()
+            comment.isFlagged(),
+            comment.flaggedReason(),
+            comment.flaggedAt(),
+            comment.isDeleted(),
+            comment.deletedAt(),
+            comment.deletedBy()
         );
     }
 }
