@@ -1,23 +1,20 @@
 package com.ulticode.modules.admin.service.comment;
 
-import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
-import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
+import com.ulticode.admin.error.AdminErrorCode;
+import com.ulticode.app.api.service.SolutionCommentOwnerPort;
+import com.ulticode.app.api.service.SolutionCommentReadPort;
+import com.ulticode.app.api.service.SolutionCommentReadPort.SolutionCommentRow;
 import com.ulticode.common.auth.CurrentUserProvider;
 import com.ulticode.common.exception.BusinessException;
-import com.ulticode.admin.error.AdminErrorCode;
 import com.ulticode.common.response.PageResult;
 import com.ulticode.common.util.AuditContext;
 import com.ulticode.modules.admin.dto.AdminCommentQueryDTO;
 import com.ulticode.modules.admin.dto.AdminCommentVO;
 import com.ulticode.modules.admin.port.AdminCommentReadPort;
-import com.ulticode.modules.solution.entity.SolutionComment;
-import com.ulticode.modules.solution.mapper.SolutionCommentMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
-import java.time.Clock;
-import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -32,14 +29,17 @@ import java.util.stream.Collectors;
  * layer a thin router and to make the cross-mapper enrichment contract
  * local to the solution side of the seam.
  *
- * <p>Writes go through {@link SolutionCommentMapper}; reads are enriched by
- * {@link AdminCommentReadPort} with author summaries and solution titles.
- * The deletion flow uses the shared {@link CurrentUserProvider} to stamp
- * {@code deleted_by}, matching the contract
+ * <p>ADMIN-006: the solution-comment entity and mapper are no longer
+ * imported. Reads (list / single) go through
+ * {@link SolutionCommentReadPort} and writes (flag / unflag / soft-delete)
+ * through {@link SolutionCommentOwnerPort}; author summaries and solution
+ * titles are enriched by {@link AdminCommentReadPort}. The deletion flow
+ * keeps the shared {@link CurrentUserProvider} to stamp {@code deleted_by},
+ * matching the contract
  * {@code AdminCommentServiceImpl#deleteComment} used to enforce.
  *
- * <p>Field differences from {@link ForumCommentModerator}: the entity is
- * {@code SolutionComment} (with {@code content} / {@code userId} /
+ * <p>Field differences from {@link ForumCommentModerator}: the row is a
+ * {@link SolutionCommentRow} (with {@code content} / {@code userId} /
  * {@code solutionId} / {@code updatedAt} instead of {@code body} /
  * {@code authorId} / {@code postId} / {@code editedAt}); the
  * {@link #toAdminVO} projection handles the rename.
@@ -53,9 +53,9 @@ public class SolutionCommentModerator implements CommentModerator {
 
     static final String TYPE = "solution";
 
-    private final SolutionCommentMapper solutionCommentMapper;
-    private final AdminCommentReadPort commentReadPort;
-    private final Clock clock;
+    private final SolutionCommentReadPort solutionCommentReadPort;
+    private final SolutionCommentOwnerPort solutionCommentOwnerPort;
+    private final AdminCommentReadPort adminCommentReadPort;
     private final CurrentUserProvider currentUserProvider;
 
     @Override
@@ -65,50 +65,52 @@ public class SolutionCommentModerator implements CommentModerator {
 
     @Override
     public PageResult<AdminCommentVO> listComments(AdminCommentQueryDTO query, int page, int limit) {
-        Page<SolutionComment> pageResult = new Page<>(page, limit);
-        List<SolutionComment> records = solutionCommentMapper.selectPageIgnoreDeleted(
-                pageResult, query.getIsFlagged(), query.getIsDeleted(), query.getSearch(),
-                query.getParentEntityId(), query.getSortBy(), query.getSortOrder());
-        pageResult.setRecords(records);
+        SolutionCommentReadPort.SolutionCommentPage commentPage = solutionCommentReadPort.page(
+                query.getIsFlagged(), query.getIsDeleted(), query.getSearch(),
+                query.getParentEntityId(), query.getSortBy(), query.getSortOrder(), page, limit);
 
-        Set<String> authorIds = records.stream()
-                .map(SolutionComment::getUserId).collect(Collectors.toSet());
-        Set<String> solutionIds = records.stream()
-                .map(SolutionComment::getSolutionId).collect(Collectors.toSet());
+        Set<String> authorIds = commentPage.rows().stream()
+                .map(SolutionCommentRow::userId).collect(Collectors.toSet());
+        Set<String> solutionIds = commentPage.rows().stream()
+                .map(SolutionCommentRow::solutionId).collect(Collectors.toSet());
 
         Map<String, AdminCommentReadPort.AuthorSummary> authorMap =
-                commentReadPort.findAuthorSummariesByIds(authorIds);
-        Map<String, String> solutionTitleMap = commentReadPort.findSolutionTitlesByIds(solutionIds);
+                adminCommentReadPort.findAuthorSummariesByIds(authorIds);
+        Map<String, String> solutionTitleMap =
+                adminCommentReadPort.findSolutionTitlesByIds(solutionIds);
 
-        List<AdminCommentVO> vos = records.stream()
-                .map(c -> toAdminVO(c, authorMap.get(c.getUserId()), solutionTitleMap.get(c.getSolutionId())))
-                .collect(Collectors.toList());
+        List<AdminCommentVO> vos = commentPage.rows().stream()
+                .map(c -> toAdminVO(c, authorMap.get(c.userId()), solutionTitleMap.get(c.solutionId())))
+                .toList();
 
-        return PageResult.of(vos, pageResult.getTotal(), page, limit);
+        return PageResult.of(vos, commentPage.total(), page, limit);
     }
 
     @Override
     public AdminCommentVO getComment(String commentId) {
-        SolutionComment comment = solutionCommentMapper.selectByIdIgnoreDeleted(commentId);
+        SolutionCommentRow comment = solutionCommentReadPort.getById(commentId);
         if (comment == null) {
             throw new BusinessException(AdminErrorCode.NOT_FOUND);
         }
-        AdminCommentReadPort.AuthorSummary author = commentReadPort
-                .findAuthorSummariesByIds(Set.of(comment.getUserId()))
-                .get(comment.getUserId());
-        String solutionTitle = commentReadPort
-                .findSolutionTitlesByIds(Set.of(comment.getSolutionId()))
-                .get(comment.getSolutionId());
+        AdminCommentReadPort.AuthorSummary author = adminCommentReadPort
+                .findAuthorSummariesByIds(Set.of(comment.userId()))
+                .get(comment.userId());
+        String solutionTitle = adminCommentReadPort
+                .findSolutionTitlesByIds(Set.of(comment.solutionId()))
+                .get(comment.solutionId());
         return toAdminVO(comment, author, solutionTitle);
     }
 
     @Override
     public void flagComment(String commentId, String reason) {
-        SolutionComment comment = requireEntity(commentId);
-        AuditContext.setUserId(comment.getUserId());
+        SolutionCommentOwnerPort.FlagResult res = solutionCommentOwnerPort.flagComment(commentId, reason);
+        if (res == null) {
+            throw new BusinessException(AdminErrorCode.NOT_FOUND);
+        }
+        AuditContext.setUserId(res.authorUserId());
         AuditContext.setOldValues(Map.of(
-            "isFlagged", comment.getIsFlagged(),
-            "flaggedReason", comment.getFlaggedReason() != null ? comment.getFlaggedReason() : "",
+            "isFlagged", res.previousIsFlagged(),
+            "flaggedReason", res.previousFlaggedReason(),
             "type", TYPE
         ));
         AuditContext.setNewValues(Map.of(
@@ -116,20 +118,19 @@ public class SolutionCommentModerator implements CommentModerator {
             "flaggedReason", reason != null ? reason : "",
             "type", TYPE
         ));
-        comment.setIsFlagged(true);
-        comment.setFlaggedReason(reason);
-        comment.setFlaggedAt(LocalDateTime.now(clock));
-        solutionCommentMapper.updateById(comment);
         log.info("Solution comment flagged: {}", commentId);
     }
 
     @Override
     public void unflagComment(String commentId) {
-        SolutionComment comment = requireEntity(commentId);
-        AuditContext.setUserId(comment.getUserId());
+        SolutionCommentOwnerPort.FlagResult res = solutionCommentOwnerPort.unflagComment(commentId);
+        if (res == null) {
+            throw new BusinessException(AdminErrorCode.NOT_FOUND);
+        }
+        AuditContext.setUserId(res.authorUserId());
         AuditContext.setOldValues(Map.of(
-            "isFlagged", comment.getIsFlagged(),
-            "flaggedReason", comment.getFlaggedReason() != null ? comment.getFlaggedReason() : "",
+            "isFlagged", res.previousIsFlagged(),
+            "flaggedReason", res.previousFlaggedReason(),
             "type", TYPE
         ));
         AuditContext.setNewValues(Map.of(
@@ -137,60 +138,51 @@ public class SolutionCommentModerator implements CommentModerator {
             "flaggedReason", "",
             "type", TYPE
         ));
-        solutionCommentMapper.update(null, new LambdaUpdateWrapper<SolutionComment>()
-            .eq(SolutionComment::getId, commentId)
-            .set(SolutionComment::getIsFlagged, false)
-            .set(SolutionComment::getFlaggedReason, null)
-            .set(SolutionComment::getFlaggedAt, null));
         log.info("Solution comment unflagged: {}", commentId);
     }
 
     @Override
     public void deleteComment(String commentId) {
-        SolutionComment comment = requireEntity(commentId);
-        AuditContext.setUserId(comment.getUserId());
-        AuditContext.setOldValues(Map.of("isDeleted", comment.getIsDeleted(), "type", TYPE));
-        AuditContext.setNewValues(Map.of("isDeleted", true, "type", TYPE));
-        // Use LambdaUpdateWrapper to bypass MyBatis-Plus FieldStrategy and entity
-        // @TableField(updateStrategy=...) uncertainty, so is_deleted=true and other
-        // audit fields are reliably persisted in a single statement.
-        String currentUserId = currentUserProvider.getCurrentUserId();
-        solutionCommentMapper.update(null, new LambdaUpdateWrapper<SolutionComment>()
-            .eq(SolutionComment::getId, commentId)
-            .set(SolutionComment::getIsDeleted, true)
-            .set(SolutionComment::getDeletedAt, LocalDateTime.now(clock))
-            .set(SolutionComment::getDeletedBy, currentUserId));
-        log.info("Solution comment deleted: {} by {}", commentId, currentUserId);
-    }
-
-    private SolutionComment requireEntity(String commentId) {
-        SolutionComment comment = solutionCommentMapper.selectByIdIgnoreDeleted(commentId);
-        if (comment == null) {
+        String deletedBy = safeActorId();
+        SolutionCommentOwnerPort.DeleteResult res =
+                solutionCommentOwnerPort.deleteComment(commentId, deletedBy);
+        if (res == null) {
             throw new BusinessException(AdminErrorCode.NOT_FOUND);
         }
-        return comment;
+        AuditContext.setUserId(res.authorUserId());
+        AuditContext.setOldValues(Map.of("isDeleted", res.previousIsDeleted(), "type", TYPE));
+        AuditContext.setNewValues(Map.of("isDeleted", true, "type", TYPE));
+        log.info("Solution comment deleted: {} by {}", commentId, deletedBy);
     }
 
-    static AdminCommentVO toAdminVO(SolutionComment comment,
+    private String safeActorId() {
+        String actorId = currentUserProvider.getCurrentUserId();
+        if (actorId == null || actorId.isBlank()) {
+            throw new BusinessException(AdminErrorCode.UNAUTHORIZED, "Authenticated admin actor is required");
+        }
+        return actorId;
+    }
+
+    static AdminCommentVO toAdminVO(SolutionCommentRow comment,
                                      AdminCommentReadPort.AuthorSummary author,
                                      String solutionTitle) {
         return new AdminCommentVO(
-            comment.getId(),
-            comment.getContent(),
-            comment.getCreatedAt(),
-            comment.getUpdatedAt() != null ? comment.getUpdatedAt() : comment.getCreatedAt(),
-            comment.getUserId(),
-            comment.getParentId(),
+            comment.id(),
+            comment.content(),
+            comment.createdAt(),
+            comment.updatedAt() != null ? comment.updatedAt() : comment.createdAt(),
+            comment.userId(),
+            comment.parentId(),
             TYPE,
-            comment.getSolutionId(),
+            comment.solutionId(),
             solutionTitle,
             author != null ? new AdminCommentVO.AuthorInfo(author.id(), author.username(), author.avatar()) : null,
-            comment.getIsFlagged(),
-            comment.getFlaggedReason(),
-            comment.getFlaggedAt(),
-            comment.getIsDeleted(),
-            comment.getDeletedAt(),
-            comment.getDeletedBy()
+            comment.isFlagged(),
+            comment.flaggedReason(),
+            comment.flaggedAt(),
+            comment.isDeleted(),
+            comment.deletedAt(),
+            comment.deletedBy()
         );
     }
 }
